--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 header{
     text-align: center;
-    height: 200px;
+    min-height: 200px;
     padding-top: 50px;
     color: white;
     background-color: black;
