--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ section.imagem#img2{
 
 footer{
     background-color: black;
-    height: 30px;
+    min-height: 30px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding-top: 15px;
